[package]
name = "safe-writing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.28"
image = "0.25"
eframe = "0.28"
font-kit = "0.14"
serde_json = "1.0.108"
serde = { version = "1.0.166", features = ["derive"] }
toml = "0.8.8"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
base64 = "0.22"
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.3"
hmac = "0.12.1"
rand = { version = "0.8.5", features = ["std_rng"] }
rfd = "0.14"
homedir = "0.3"

[build-dependencies]
winres = "0.1.12"
